# synapse_vision_traffic_detector

./: CMakeLists.txt  LICENSE  package.xml  readme.md
config/: params.yaml
launch/: detector.launch.py
msg/: TrafficSign.msg
src/: traffic_sign_detector_node.cpp
